// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`numeric-array.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
console.log([
  123,
  456,
  789,
  123,
  456,
  789,
  123,
  456,
  789,
  123,
  456,
  789,
  123,
  456,
  789,
  123,
  456,
  789,
  123,
  456,
  789,
  123,
  456,
  789,
  123,
  456,
  789,
  123,
  456,
  789,
])

=====================================output=====================================
console.log([
  123, 456, 789, 123, 456, 789, 123, 456, 789, 123, 456, 789, 123, 456, 789,
  123, 456, 789, 123, 456, 789, 123, 456, 789, 123, 456, 789, 123, 456, 789,
]);

================================================================================
`;

exports[`string-array.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
console.log([
  "#000000",
  "#444444",
  "#777777",
  "#ffffff",
  "#000000",
  "#444444",
  "#777777",
  "#ffffff",
  "#000000",
  "#444444",
  "#777777",
  "#ffffff",
  "#000000",
  "#444444",
  "#777777",
  "#ffffff",
  "#000000",
  "#444444",
  "#777777",
  "#ffffff",
])

=====================================output=====================================
console.log([
  "#000000",
  "#444444",
  "#777777",
  "#ffffff",
  "#000000",
  "#444444",
  "#777777",
  "#ffffff",
  "#000000",
  "#444444",
  "#777777",
  "#ffffff",
  "#000000",
  "#444444",
  "#777777",
  "#ffffff",
  "#000000",
  "#444444",
  "#777777",
  "#ffffff",
]);

================================================================================
`;
